<resources>


    <string name="app_name">Rayzi Audio Room</string>

    <string name="facebook_app_id">874383896560753</string>
    <string name="fb_login_protocol_scheme">fb874383896560753</string>

    <string name="count_clips" formatted="false">%s clips</string>
    <string name="match_guide_click">"Tap the Screen to match "</string>
    <string name="image">Image</string>
    <string name="dummytext">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="purchase_decription">Regular renewal, cancel at any time \n The payment of purchasing the subscription will be charged from your Google Play account.\nYour subscription will be automatically renewed for the same package duration with same price until you cancel it in the Google Play store settings at least 24 hours before the end of the current subscription.By confirming your subscription you agree to our Terms of Use and Privacy Policy</string>
    <string name="whaitis_rcoin">1.When you receive gifts , like a Lamborghini or Castle, you immediately earn the same amount of Rcoins as the gift\'s price in the Gift Store.\n\n2.You can convert Rcoins to both diamonds and cash.\n\n3.Rcoins balance Available+Withdrawing\n</string>
    <string name="bio">𝐋𝐢𝐟𝐞 𝐝𝐨𝐞𝐬𝐧’𝐭 𝐚𝐥𝐰𝐚𝐲𝐬 𝐠𝐢𝐯𝐞 𝐮 𝐚 𝐬𝐞𝐜𝐨𝐧𝐝 𝐜𝐡𝐚𝐧𝐜𝐞🤗💞💙 𝐔 𝐧𝐞𝐯𝐞𝐫 𝐠𝐞𝐭 𝐚 𝐬𝐞𝐜𝐨𝐧𝐝 𝐜𝐡𝐚𝐧𝐜𝐞 𝐭𝐨 𝐜𝐫𝐞𝐚𝐭𝐞 𝐭𝐡𝐞 𝐟𝐢𝐫𝐬𝐭 𝐢𝐦𝐩𝐫𝐞𝐬𝐬𝐢𝐨𝐧😊💛💚💜 𝐒𝐨 𝐦𝐚𝐤𝐞 𝐮𝐫 𝐟𝐢𝐫𝐬𝐭 𝐜𝐡𝐚𝐧𝐜𝐞 𝐜𝐨𝐮𝐧𝐭☺️💝💖❤️</string>
    <string name="dummyname">@Mia Malkova</string>
    <string name="timer_hint">To cancel timer before it starts, click here.</string>
    <string name="mmss">00:00</string>
    <string name="sound_hint">Click to choose a song.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online">Back Online</string>
    <string name="vip_online">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>

    <string name="notification_preview_description">This will take just a few moments.</string>
    <string name="policy">By Signing up you will be agree to our</string>
    <string name="notification_preview_title">Preparing for upload…</string>
    <string name="notification_upload_description">Just a few moments before it goes on air.</string>
    <string name="notification_upload_title">Uploading Relite…</string>
    <string name="notification_upload_failed_description">The video has to been saved to drafts.</string>
    <string name="notification_upload_failed_title">Failed to upload.</string>
    <string name="notification_watermark_description">This will take a while, we\'ll notify you when done.</string>
    <string name="notification_watermark_title">Optimizing clip…</string>

    <string name="audio_from_clip">Custom audio from clip.</string>
    <string name="browse_file_title">Browse file</string>
    <string name="cancel_button">Cancel</string>
    <string name="message_song_change">You cannot change songDummy after recording has started.</string>
    <string name="message_song_select">You cannot select songDummy after recording has started.</string>
    <string name="message_trim_too_long" formatted="false">Please select no more that %d seconds to cut.</string>
    <string name="message_trim_too_short" formatted="false">Please select at least %d seconds to cut.</string>
    <string name="notification_channel_name">Default</string>
    <string name="notification_download_description">Should not taker longer than a few seconds.</string>
    <string name="notification_download_title">Download file…</string>

    <string name="pan_audio_hint">You may use this option to synchronize audio and video by adjusting audio to start a little earlier or later.</string>
    <string name="permission_rationale_upload">To pick and upload video from Gallery, storage permission is needed.</string>
    <string name="progress_title">Please wait…</string>
    <string name="recorder_error_in_progress">To do this, please stop recording first.</string>
    <string name="recorder_error_maxed_out">You have already recorded for maximum duration.</string>
    <string name="recorder_error_no_clips">Please record your clip first to continue.</string>
    <string name="song_volume_label">song volume</string>
    <string name="Copied_successfully">Copied Successfully..</string>

    <string name="video_volume_label">video volume</string>
    <string name="volume_hint">You may use these options to control intensity of audio between recorded video and (optional) chosen song.</string>
    <string name="notification_channel_id">default</string>
    <string name="confirmation_delete_draft">Do you really want to permanently delete this draft clip? It cannot be undone.</string>
    <string name="uploading_message">Your clip will be uploaded shortly.</string>
    <string name="per_deny">Need permission !</string>
    <string name="entercarddetails">Enter card details</string>

    <string name="take_the_mic">Take the Mic</string>
    <string name="give_the_mic">Give the Mic</string>
    <string name="lock_the_mic">Lock the Mic</string>
    <string name="mute_the_mic">Mute the Mic</string>
    <string name="theme">Theme</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="abc">abc</string>
    <string name="india">India</string>
    <string name="picaso_roman">Picaso Roman</string>
    <string name="Male">male</string>
    <string name="mute_mic">Mute mic</string>
    <string name="remove_seat">Remove seat</string>
    <string name="kick_out">Kick out</string>
    <string name="rtc_stats_format">Downstream Bitrate: %.2f kbps%nDownstream Loss Rate: %.2f%% %nUpstream Bitrate: %.2f kbps%nUpstream Loss Rate: %.2f%%</string>
    <string name="exit">Are you sure you want Exit ?</string>
    <string name="cancel">cancel</string>
    <string name="are_you_sure_to_switch_this">Are you sure to switch this ??</string>
    <string name="sure">Sure</string>
    <string name="monkey_mino">Monkey mino</string>
    <string name="add_a_comment">Add a Comment...</string>
    <string name="in_this_apk_nall_data_are_only_for_demo_purpose">In this APK,\nAll data are only for Demo Purpose.</string>
    <string name="male">Male</string>

</resources>