<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/amidum"
                android:paddingBottom="10dp"
                android:text="@string/are_you_sure_to_switch_this"
                android:textColor="@color/gray_icon"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_stok_round_gray"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/graylight" />

                <Button
                    android:id="@+id/sure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_stok_round_pink"
                    android:backgroundTint="@color/sky"
                    android:text="@string/sure"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>