<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_bottom_sheet"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:id="@+id/detailLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/amidum"
                    android:text="@string/picaso_roman"
                    android:textColor="@color/blackpure"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/bg_5dp"
                        android:backgroundTint="@color/graylight"
                        android:fontFamily="@font/amidum"
                        android:maxLength="10"
                        android:padding="2dp"
                        android:text="ID"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/userId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/amidum"
                        android:maxLength="10"
                        android:text="123456"
                        android:textColor="@color/graylight"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/location" />


                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/amidum"
                        android:text="@string/india"
                        android:textColor="@color/graylight"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_gradient_round_black"
                        android:backgroundTint="#FB8C00"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="5dp"
                            android:src="@drawable/gender_audio" />

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/amidum"
                            android:text="@string/Male"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_gradient_round_black"
                        android:backgroundTint="#039BE5"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="5dp"
                            android:src="@drawable/coin" />

                        <TextView
                            android:id="@+id/userCoin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/amidum"
                            android:text="@string/india"
                            android:textColor="@color/white"
                            android:textSize="10sp" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_below="@+id/detailLay"
                android:layout_marginTop="10dp"
                android:background="@color/gray_icon" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp">


                <LinearLayout
                    android:id="@+id/unMuteMic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mute"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/speaker" />

                    <TextView
                        android:id="@+id/txtMic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/amidum"
                        android:text="@string/mute_mic"
                        android:textColor="@color/graylight"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/removeSit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/seat"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/remove_sit" />


                    <TextView
                        android:id="@+id/txtSeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/amidum"
                        android:text="@string/remove_seat"
                        android:textColor="@color/graylight"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/kickOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:padding="2dp"
                        android:src="@drawable/kikout" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/amidum"
                        android:text="@string/kick_out"
                        android:textColor="@color/graylight"
                        android:textSize="15sp" />


                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>


        <ImageView
            android:id="@+id/userImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/bg_round_pink" />

    </RelativeLayout>
</layout>